Revision history for Perl extension Module::Build.

0.2611

 - Fix the output of an informational message that we output when
   changing the 'shebang line' in installable scripts. [Robin Barker]

0.2610  Fri Apr 15 08:25:01 CDT 2005

 - new_from_context() was losing its arguments in some cases (and not
   because of inadequate training in debate) - we now pass its
   arguments directly to the Build.PL script rather than merging them
   in afterwards. [Ray Zimmerman]

 - Fixed a bug in which config_data and feature data were being
   forgotten and no ConfigData.pm module would get written. [Ray
   Zimmerman]

 - Added a recipe to the cookbook showing how to run a single test
   file from the command line. [William McKee]

 - For command-line arguments, we now accept the syntax "--foo=bar" in
   addition to "--foo bar" and "foo=bar".  This seems to fit well with
   what GNU getopt and Getopt::Long do, and with people's
   expectations. [Adam Spiers]

0.2609  Wed Mar 16 22:18:35 CST 2005

 - The html docs that were created during the first invokation of
   './Build' were being found and treated as pod that needed to be
   converted to html during subsequent invokations. We now are more
   specific about the directories we scan for pod that needs to be
   converted, effectively avoiding blib/html. [Ray Zimmerman]

 - If Pod::Man is not available, we now skip building man pages
   (rather than dying) and tell the user why.

 - We now write a .packlist file upon installation, in the same place
   that ExtUtils::MakeMaker does. [Johnny Lam]

 - On some Unix platforms (BSD derivatives, mostly) perl's $^X
   variable isn't set to the full path of the perl executable, just
   'perl', when the 'Build' script is run as './Build' and not 'perl
   ./Build'.  This can lead to some other modules (maybe
   Test::Harness, maybe IO::File, I dunno...) getting very confused
   about where they are, and they try to load stuff from the wrong